--- a/package.xml
+++ b/package.xml
@@ -18,12 +18,14 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>nav_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
+  <build_depend>nodelet</build_depend>
 
   <run_depend>mrs_lib</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>pcl_ros</run_depend>
+  <run_depend>nodelet</run_depend>
 
   <export>
     <nodelet plugin="${prefix}/balloon_planner.xml" />
