--- a/package.xml
+++ b/package.xml
@@ -12,6 +12,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>roscpp</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>mrs_msgs</build_depend>
   <build_depend>mrs_lib</build_depend>
   <build_depend>pcl_ros</build_depend>
@@ -21,6 +22,7 @@
   <build_depend>nodelet</build_depend>
 
   <run_depend>mrs_lib</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
   <run_depend>pcl_ros</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
