preparing code for simple balloon catching

--- a/tmux_scripts/simulation/.tmuxinator.yml
+++ b/tmux_scripts/simulation/.tmuxinator.yml
@@ -7,11 +7,12 @@ windows:
   - roscore:
       layout: even-vertical
       panes:
-        # - roscore
+        - roscore
   - gazebo:
       layout: even-vertical
       panes:
-        - export DISPLAY=:1; waitForRos; roslaunch balloon_localize simulation.launch gui:=false
+        - waitForRos; roslaunch balloon_simulation simulation.launch gui:=false
+        - waitForRos; roslaunch balloon_attacher attacher.launch
   - spawn:
       layout: even-vertical
       panes:
@@ -19,46 +20,40 @@ windows:
   - control:
       layout: even-vertical
       panes:
-        - waitForOdometry; roslaunch mrs_mav_manager simulation.launch
+        - waitForOdometry; roslaunch mrs_uav_manager simulation_f550_gps.launch
   - takeoff:
       layout: even-vertical
       panes:
         #{ uav1
         - 'waitForControl;
           rosservice call /$UAV_NAME/mavros/cmd/arming 1;
-          rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
           rosservice call /$UAV_NAME/control_manager/motors 1;
-          rosservice call /$UAV_NAME/mav_manager/takeoff;
+          rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
+          rosservice call /$UAV_NAME/uav_manager/takeoff;
           sleep 5;
-          rosservice call /$UAV_NAME/control_manager/switch_tracker mrs_trackers/LineTracker;
           rosservice call /$UAV_NAME/control_manager/goto "goal: [0.0, 0.0, 3.0, 0.6]"'
         #}
-  - balloon_manager:
+  - goto:
       layout: even-vertical
       panes:
-        - waitForRos; roslaunch balloon_attacher attacher.launch
-  - mpc_goto:
-      layout: even-vertical
-      panes:
-        - 'history -s rosservice call /$UAV_NAME/control_manager/switch_tracker mrs_trackers/MpcTracker'
         - 'history -s rosservice call /$UAV_NAME/control_manager/goto \"goal: \[0.0, 10.0, 5.0, 0.0\]\"'
   - detector:
       layout: even-vertical
       panes:
-        - waitForControl; roslaunch balloon_localize sim_balloon_detect.launch
+        - waitForControl; roslaunch object_detect object_detect.launch
   - balloon_planner:
       layout: even-vertical
       panes:
-        - waitForRos; roslaunch balloon_planner simulation.launch
-  - compressed_republish:
-      layout: even-vertical
-      panes:
-        - waitForControl; rosrun image_transport republish raw in:=/uav1/balloon_detect/debug_image compressed out:=/uav1/balloon_detect/debug_image
-  - fake_screen:
-      layout: even-vertical
-      panes:
-        - ~/git/linux-setup/scripts/fake_screen.sh
-  # - rviz:
+        - waitForRos; roslaunch balloon_planner sim_plan.launch
+  # - compressed_republish:
   #     layout: even-vertical
   #     panes:
-  #       - rviz
+  #       - waitForControl; rosrun image_transport republish raw in:=/uav1/balloon_detect/debug_image compressed out:=/uav1/balloon_detect/debug_image
+  # - fake_screen:
+  #     layout: even-vertical
+  #     panes:
+  #       - ~/git/linux-setup/scripts/fake_screen.sh
+  - rviz:
+      layout: even-vertical
+      panes:
+        - waitForRos; rviz
