--- a/config/sim_plan_params.yaml
+++ b/config/sim_plan_params.yaml
@@ -2,3 +2,4 @@ planning_period: 0.01 # seconds
 world_frame: "local_origin_stable"
 min_balloon_height: 1.0 # meters
 filter_coeff: 0.9
+gating_distance: 2.0 # meters
