--- a/config/sim_plan_params.yaml
+++ b/config/sim_plan_params.yaml
@@ -3,3 +3,5 @@ world_frame: "local_origin_stable"
 min_balloon_height: 1.0 # meters
 filter_coeff: 0.9
 gating_distance: 2.0 # meters
+max_time_since_update: 2.0 # seconds
+min_updates_to_confirm: 30
