--- a/package.xml
+++ b/package.xml
@@ -20,6 +20,7 @@
   <build_depend>nav_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>nodelet</build_depend>
+  <build_depend>message_generation</build_depend>
 
   <run_depend>mrs_lib</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
