now with dynamic reconfiguration

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -10,16 +10,10 @@ gen = ParameterGenerator();
 
 params = gen.add_group("Balloon planner parameters");
 
-params.add("xy_covariance_coeff", double_t, 1, "covariance of the detection measurement in the XY direction (in camera CS)", 0.1, 0.01, 1.0);
-params.add("z_covariance_coeff", double_t, 1, "covariance of the detection measurement in the Z direction (in camera CS)", 0.1, 0.01, 1.0);
-
-params.add("max_update_divergence", double_t, 1, "maximal divergence between a measurement and a LKF for the measurement to be considered for association to a LKF", 5.0, 0.01, 1000.0);
-params.add("max_lkf_uncertainty", double_t, 1, "if a LKF exceeds this uncertainty, it is kicked out of the pool of active LKFs", 3.0, 0.1, 20.0);
-
-params.add("lkf_process_noise_pos", double_t, 1, "process noise of the LKF position states (scaled to seconds)", 1.0, 0.1, 20.0);
-params.add("lkf_process_noise_vel", double_t, 1, "process noise of the LKF velocity states (scaled to seconds)", 3.0, 0.1, 20.0);
-
-params.add("init_vel_cov", double_t, 1, "initial covariance of velocity states at LKF initialization", 4.0, 0.1, 20.0);
-params.add("min_corrs_to_consider", int_t, 1, "a LKF must have received at least this many corrections before it is considered as a candidate for publishing", 20, 0, 100);
+params.add("min_balloon_height", double_t, 1, "balloon detection below this height will be discarded", 1.0, 0.0, 10.0);
+params.add("filter_coeff", double_t, 1, "coefficient of the balloon position exponential filter", 0.9, 0.0, 1.0);
+params.add("gating_distance", double_t, 1, "maximal distance of a detection to be associated to the chosen balloon", 2.0, 0.0, 20.0);
+params.add("max_time_since_update", double_t, 1, "after no detection is associated to the chosen balloon, it is forgotten", 2.0, 0.0, 60.0);
+params.add("min_updates_to_confirm", int_t, 1, "minimal number of updates to be associated to the chosen balloon for it to be confirmed", 30, 0, 600);
 
 exit(gen.generate(PACKAGE, "balloon_planner", "PlanningParams"))
