changed min_dist_quality to enum in dynamic reconfigure

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -15,6 +15,15 @@ params.add("filter_coeff", double_t, 1, "coefficient of the balloon position exp
 params.add("gating_distance", double_t, 1, "maximal distance of a detection to be associated to the chosen balloon", 2.0, 0.0, 20.0);
 params.add("max_time_since_update", double_t, 1, "after no detection is associated to the chosen balloon, it is forgotten", 2.0, 0.0, 60.0);
 params.add("min_updates_to_confirm", int_t, 1, "minimal number of updates to be associated to the chosen balloon for it to be confirmed", 30, 0, 600);
-params.add("min_dist_quality", int_t, 1, "minimal quality of the distance estimate to consider a point (0 corresponds to no estimate, 1 is only from blob size, 2 is only from depthmap and 3 is both)", 1, 0, 3);
+# Color parameters for image binarization
+dist_quality_enum = gen.enum([ 
+                        gen.const("no_estimate", int_t, 0, "no distance estimate is available"),
+                        gen.const("blob_size_only", int_t, 1, "distance estimate from the blob size is used"),
+                        gen.const("depthmap_only", int_t, 2, "distance estimate from the depthmap is used"),
+                        gen.const("both", int_t, 3, "the distance estimate from the blob size and from the depthmap correspond"),
+                        ],
+                        "Segmentation color")
+params.add("min_dist_quality", int_t, 0, "minimal quality of the distance estimate to consider a point", 1, 0, 3, edit_method=dist_quality_enum)
+
 
 exit(gen.generate(PACKAGE, "balloon_planner", "PlanningParams"))
