--- a/package.xml
+++ b/package.xml
@@ -21,6 +21,7 @@
   <build_depend>pcl_ros</build_depend>
   <build_depend>nodelet</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>object_detect</build_depend>
 
   <run_depend>mrs_lib</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
