--- a/config/sim_plan_params.yaml
+++ b/config/sim_plan_params.yaml
@@ -2,6 +2,7 @@ planning_period: 0.01 # seconds
 world_frame: "local_origin_stable"
 min_balloon_height: 1.0 # meters
 filter_coeff: 0.9
-gating_distance: 2.0 # meters
+gating_distance: 4.0 # meters
 max_time_since_update: 2.0 # seconds
 min_updates_to_confirm: 30
+process_noise_std: 1 # meters
