started writing the eight flier model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,7 +57,7 @@ include_directories(
 
 ## Declare a C++ executable
 add_library(BalloonPlanner
-  src/Lkf.cpp
+  src/eight_ukf.cpp
   src/BalloonPlanner.cpp
   )
 
