added min/max z bounds for balloon detections

--- a/config/sim_plan_params.yaml
+++ b/config/sim_plan_params.yaml
@@ -1,7 +1,9 @@
 planning_period: 0.01 # seconds
 world_frame: "local_origin_stable"
-min_balloon_height: 0.5 # meters
 gating_distance: 4.0 # meters
 max_time_since_update: 2.0 # seconds
 min_updates_to_confirm: 10
 process_noise_std: 1 # meters
+z_bounds: # measurements outside these bounds will be ignored
+  min: 5  # metres
+  max: 10 # metres
