--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -12,6 +12,18 @@ params = gen.add_group("Balloon planner parameters");
 
 params.add("z_bounds__min", double_t, 1, "balloon detection below this height will be discarded", 1.0, 0.0, 20.0);
 params.add("z_bounds__max", double_t, 1, "balloon detection above this height will be discarded", 1.0, 0.0, 20.0);
+
+params.add("process_std__position", double_t, 1, "standard deviation of process noise of the position states", 1.0, 0.0, 20.0);
+params.add("process_std__yaw", double_t, 1, "standard deviation of process noise of the yaw state", 1.0, 0.0, 20.0);
+params.add("process_std__speed", double_t, 1, "standard deviation of process noise of the speed state", 1.0, 0.0, 20.0);
+params.add("process_std__curvature", double_t, 1, "standard deviation of process noise of the curvature state", 1.0, 0.0, 20.0);
+params.add("process_std__quaternion", double_t, 1, "standard deviation of process noise of the quaternion states", 1.0, 0.0, 20.0);
+
+params.add("init_std__yaw", double_t, 1, "standard deviation of initial covariance of the yaw state", 1.0, 0.0, 20.0);
+params.add("init_std__speed", double_t, 1, "standard deviation of initial covariance of the speed state", 1.0, 0.0, 20.0);
+params.add("init_std__curvature", double_t, 1, "standard deviation of initial covariance of the curvature state", 1.0, 0.0, 20.0);
+params.add("init_std__quaternion", double_t, 1, "standard deviation of initial covariance of the quaternion states", 1.0, 0.0, 20.0);
+
 params.add("gating_distance", double_t, 1, "maximal distance of a detection to be associated to the chosen balloon", 2.0, 0.0, 20.0);
 params.add("max_time_since_update", double_t, 1, "after no detection is associated to the chosen balloon, it is forgotten", 2.0, 0.0, 60.0);
 params.add("min_updates_to_confirm", int_t, 1, "minimal number of updates to be associated to the chosen balloon for it to be confirmed", 30, 0, 600);
