--- a/tmux_scripts/simulation/session.yml
+++ b/tmux_scripts/simulation/session.yml
@@ -16,35 +16,55 @@ windows:
   - spawn:
       layout: even-vertical
       panes:
-        - waitForSimulation; spawn 1 --run --delete --enable-rangefinder --enable-ground-truth --enable-realsense-front
+        - export UAV_NAME=uav1; waitForSimulation; spawn 1 --run --delete --enable-rangefinder --enable-ground-truth --enable-realsense-front
+        - export UAV_NAME=uav2; waitForSimulation; spawn 2 --run --delete --enable-rangefinder --enable-ground-truth --enable-ball-holder
   - control:
       layout: even-vertical
       panes:
-        - waitForOdometry; roslaunch mrs_uav_manager simulation_f550_gps.launch
+        - export UAV_NAME=uav1; waitForOdometry; roslaunch mrs_general core.launch
+        - export UAV_NAME=uav2; waitForOdometry; roslaunch mrs_general core.launch
   - takeoff:
       layout: even-vertical
       panes:
         #{ uav1
-        - 'waitForControl;
+        - '
+          export UAV_NAME=uav1; 
+          waitForControl;
           rosservice call /$UAV_NAME/mavros/cmd/arming 1;
           rosservice call /$UAV_NAME/control_manager/motors 1;
           rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
           rosservice call /$UAV_NAME/uav_manager/takeoff;
-          sleep 5;
-          rosservice call /$UAV_NAME/control_manager/goto "goal: [0.0, 0.0, 3.0, 0.6]"'
+          sleep 8;
+          rosservice call /$UAV_NAME/control_manager/goto "goal: [4.0, -2.0, 7.0, 0.0]"'
+        #}
+        #{ uav2
+        - '
+          export UAV_NAME=uav2; 
+          waitForControl;
+          rosservice call /$UAV_NAME/mavros/cmd/arming 1;
+          rosservice call /$UAV_NAME/control_manager/motors 1;
+          rosservice call /$UAV_NAME/mavros/set_mode 0 offboard;
+          rosservice call /$UAV_NAME/uav_manager/takeoff;
+          sleep 8;
+          rosservice call /$UAV_NAME/control_manager/goto "goal: [3.0, 3.0, 4.0, 0.6]"'
         #}
   - goto:
       layout: even-vertical
       panes:
-        - 'history -s rosservice call /$UAV_NAME/control_manager/goto \"goal: \[0.0, 10.0, 5.0, 0.0\]\"'
+        - '
+          waitForControl;
+          roslaunch balloon_planner generate_eight.launch;
+          roslaunch trajectory_loader multimaster_trajectories_loader.launch loop:=true;
+          history -s roslaunch trajectory_loader multimaster_start_following.launch;
+          '
   - detector:
       layout: even-vertical
       panes:
         - waitForControl; roslaunch object_detect object_detect.launch
-  - balloon_planner:
-      layout: even-vertical
-      panes:
-        - waitForRos; roslaunch balloon_planner sim_plan.launch
+  # - balloon_planner:
+  #     layout: even-vertical
+  #     panes:
+        # - waitForRos; roslaunch balloon_planner sim_plan.launch
   # - compressed_republish:
   #     layout: even-vertical
   #     panes:
@@ -53,7 +73,3 @@ windows:
   #     layout: even-vertical
   #     panes:
   #       - ~/git/linux-setup/scripts/fake_screen.sh
-  - rviz:
-      layout: even-vertical
-      panes:
-        - waitForRos; rviz
