--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,18 +71,18 @@ target_link_libraries(BalloonPlanner
   ${catkin_LIBRARIES}
   )
 
-# ## Declare a C++ executable
-# add_executable(eight_ukf
-#   src/eight_ukf.cpp
-#   )
-# add_dependencies(eight_ukf
-#   ${${PROJECT_NAME}_EXPORTED_TARGETS}
-#   ${catkin_EXPORTED_TARGETS})
-# ## Specify libraries to link a library or executable target against
-# target_link_libraries(eight_ukf
-#   ${catkin_LIBRARIES}
-#   )
-# target_compile_options(eight_ukf PRIVATE "-DCOMPILE_EIGHT_UKF_TEST")
+## Declare a C++ executable
+add_executable(eight_ukf
+  src/eight_ukf.cpp
+  )
+add_dependencies(eight_ukf
+  ${${PROJECT_NAME}_EXPORTED_TARGETS}
+  ${catkin_EXPORTED_TARGETS})
+## Specify libraries to link a library or executable target against
+target_link_libraries(eight_ukf
+  ${catkin_LIBRARIES}
+  )
+target_compile_options(eight_ukf PRIVATE "-DCOMPILE_EIGHT_UKF_TEST")
 
 ## Declare a C++ executable
 add_executable(eight_rheiv
