--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -1,6 +1,6 @@
 planning_period: 0.01 # seconds
-world_frame: "local_origin_stable"
-gating_distance: 4.0 # meters
+world_frame: "local_origin"
+gating_distance: 20.0 # meters
 max_time_since_update: 2.0 # seconds
 min_updates_to_confirm: 10
 
@@ -18,9 +18,10 @@ init_std:
   quaternion: 0.6
 
 z_bounds: # measurements outside these bounds will be ignored
-  min: 5  # metres
-  max: 10 # metres
+  min: 0  # metres
+  max: 20 # metres
 
 rheiv:
   fitting_period: 0.1 # seconds
-  min_points: 20
+  min_points: 100
+  max_points: 500
