trajectory prediction now working quite nicely

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -27,6 +27,8 @@ params.add("init_std__quaternion", double_t, 1, "standard deviation of initial c
 params.add("gating_distance", double_t, 1, "maximal distance of a detection to be associated to the chosen balloon", 2.0, 0.0, 20.0);
 params.add("max_time_since_update", double_t, 1, "after no detection is associated to the chosen balloon, it is forgotten", 2.0, 0.0, 60.0);
 params.add("min_updates_to_confirm", int_t, 1, "minimal number of updates to be associated to the chosen balloon for it to be confirmed", 30, 0, 600);
+
+params.add("ukf__prediction_horizon", double_t, 1, "duration of the prediction horizont for the ball trajectory", 20.0, 0.0, 100.0);
 # Color parameters for image binarization
 dist_quality_enum = gen.enum([ 
                         gen.const("no_estimate", int_t, 0, "no distance estimate is available"),
