cleanup, this will now be really only a planner

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   mrs_lib
   pcl_ros
   message_generation
-  object_detect
+  balloon_filter
   )
 
 # include Eigen3
@@ -59,8 +59,6 @@ include_directories(
 
 ## Declare a C++ executable
 add_library(BalloonPlanner
-  src/eight_ukf.cpp
-  src/eight_rheiv.cpp
   src/BalloonPlanner.cpp
   )
 add_dependencies(BalloonPlanner
@@ -70,29 +68,3 @@ add_dependencies(BalloonPlanner
 target_link_libraries(BalloonPlanner
   ${catkin_LIBRARIES}
   )
-
-## Declare a C++ executable
-add_executable(eight_ukf
-  src/eight_ukf.cpp
-  )
-add_dependencies(eight_ukf
-  ${${PROJECT_NAME}_EXPORTED_TARGETS}
-  ${catkin_EXPORTED_TARGETS})
-## Specify libraries to link a library or executable target against
-target_link_libraries(eight_ukf
-  ${catkin_LIBRARIES}
-  )
-target_compile_options(eight_ukf PRIVATE "-DCOMPILE_EIGHT_UKF_TEST")
-
-## Declare a C++ executable
-add_executable(eight_rheiv
-  src/eight_rheiv.cpp
-  )
-add_dependencies(eight_rheiv
-  ${${PROJECT_NAME}_EXPORTED_TARGETS}
-  ${catkin_EXPORTED_TARGETS})
-## Specify libraries to link a library or executable target against
-target_link_libraries(eight_rheiv
-  ${catkin_LIBRARIES}
-  )
-target_compile_options(eight_rheiv PRIVATE "-DCOMPILE_EIGHT_RHEIV_TEST")
