--- a/package.xml
+++ b/package.xml
@@ -1,35 +1,27 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
 
   <name>balloon_planner</name>
   <version>1.0.0</version>
   <description>The balloon_planner package</description>
 
-  <maintainer email="matej.petrlik@fel.cvut.cz">Matej Petrlik</maintainer>
+  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
+  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>
 
-  <license>TODO</license>
+  <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roscpp</build_depend>
-  <build_depend>dynamic_reconfigure</build_depend>
-  <build_depend>mrs_msgs</build_depend>
-  <build_depend>mrs_lib</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>nodelet</build_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>object_detect</build_depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>roscpp</depend>
+  <depend>std_msgs</depend>
+  <depend>mrs_msgs</depend>
+  <depend>balloon_filter</depend>
+  <depend>nodelet</depend>
 
-  <run_depend>mrs_lib</run_depend>
-  <run_depend>dynamic_reconfigure</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>nodelet</run_depend>
+  <build_depend>message_generation</build_depend>
 
   <export>
     <nodelet plugin="${prefix}/balloon_planner.xml" />
