--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -1,32 +1,7 @@
 planning_period: 0.01 # seconds
 world_frame: "local_origin"
-gating_distance: 20.0 # meters
-max_time_since_update: 2.0 # seconds
-min_updates_to_confirm: 10
-ukf:
-  prediction_horizon: 8.0 # seconds
-  prediction_step: 1.0 # seconds
-  prediction_period: 0.05 # seconds
-
-process_std:
-  position: 0.5
-  yaw: 0.01
-  speed: 0.01
-  curvature: 10.0
-  quaternion: 0.00001
-
-init_std:
-  yaw: 2.0
-  speed: 1.0
-  curvature: 2.0
-  quaternion: 0.6
-
-z_bounds: # measurements outside these bounds will be ignored
-  min: 0  # metres
-  max: 20 # metres
-
-rheiv:
-  fitting_period: 0.1 # seconds
-  min_points: 100
-  max_points: 500
-  visualization_size: 5 # metres
+approach_speed: 3.0 # meters per second
+path_offset: 0.8 # metres
+trajectory:
+  sampling_dt: 0.2 # seconds
+  horizon: 8.0 # seconds
