myslenka dobra ale provedeni pokulhava, need to add some velocity constraints or smh

--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -18,3 +18,7 @@ start_position:
     5.0,   # z coordinate (metres)
     0.0    # yaw (radians)
   ]
+
+observing:
+  max_ball_angle: !degrees 20.0
+  ball_distance: 10 # metres
