it does smh half reasonable

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -13,4 +13,6 @@ params = gen.add_group("Balloon planner parameters");
 params.add("z_bounds__min", double_t, 1, "balloon detection below this height will be discarded", 1.0, 0.0, 20.0);
 params.add("z_bounds__max", double_t, 1, "balloon detection above this height will be discarded", 1.0, 0.0, 20.0);
 
+params.add("trajectory__target_offset", double_t, 1, "offset of the target position from the filtered ball position", 2.0, 0.0, 10.0);
+
 exit(gen.generate(PACKAGE, "balloon_planner", "PlanningParams"))
