--- a/tmux_scripts/simulation/custom_configs/constraint_manager.yaml
+++ b/tmux_scripts/simulation/custom_configs/constraint_manager.yaml
@@ -1,3 +1,10 @@
+fast:
+  yaw:
+    speed: 3.14
+    acceleration: 20.0
+    jerk: 30.0
+    snap: 30.0
+
 extreme:
 
   horizontal:
@@ -42,4 +49,4 @@ constraint_management:
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
-    GPS: "extreme"
+    GPS: "fast"
