trying to fuse approach and chase trajectories

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -14,5 +14,6 @@ params.add("z_bounds__min", double_t, 1, "balloon detection below this height wi
 params.add("z_bounds__max", double_t, 1, "balloon detection above this height will be discarded", 1.0, 0.0, 20.0);
 
 params.add("trajectory__target_offset", double_t, 1, "offset of the target position from the filtered ball position", 2.0, 0.0, 10.0);
+params.add("trajectory__horizon", double_t, 1, "planning horizong (how much forward in time to plan the trajectory)", 2.0, 0.0, 20.0);
 
 exit(gen.generate(PACKAGE, "balloon_planner", "PlanningParams"))
