uses lkf predictions or ukf predictions when possible

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -16,4 +16,6 @@ params.add("z_bounds__max", double_t, 1, "balloon detection above this height wi
 params.add("trajectory__target_offset", double_t, 1, "offset of the target position from the filtered ball position", 2.0, 0.0, 10.0);
 params.add("trajectory__horizon", double_t, 1, "planning horizong (how much forward in time to plan the trajectory)", 2.0, 0.0, 20.0);
 
+params.add("approach_speed", double_t, 1, "max. speed to approach the ball", 2.0, 0.0, 20.0);
+
 exit(gen.generate(PACKAGE, "balloon_planner", "PlanningParams"))
