--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -17,5 +17,6 @@ params.add("trajectory__target_offset", double_t, 1, "offset of the target posit
 params.add("trajectory__horizon", double_t, 1, "planning horizong (how much forward in time to plan the trajectory)", 2.0, 0.0, 20.0);
 
 params.add("approach_speed", double_t, 1, "max. speed to approach the ball", 2.0, 0.0, 20.0);
+params.add("chase_speed", double_t, 1, "speed increase (relative to ball speed) when chasing the ball", 2.0, 0.0, 20.0);
 
 exit(gen.generate(PACKAGE, "balloon_planner", "PlanningParams"))
