catching state is now triggered by distance from detection

--- a/config/PlanningParams.cfg
+++ b/config/PlanningParams.cfg
@@ -18,5 +18,6 @@ params.add("trajectory__horizon", double_t, 1, "planning horizong (how much forw
 
 params.add("approach_speed", double_t, 1, "max. speed to approach the ball", 2.0, 0.0, 20.0);
 params.add("chase_speed", double_t, 1, "speed increase (relative to ball speed) when chasing the ball", 2.0, 0.0, 20.0);
+params.add("catch_trigger_distance", double_t, 1, "when predictions are available and the target is closer than this distance, the catching manoeuvre will begin", 2.5, 0.0, 20.0);
 
 exit(gen.generate(PACKAGE, "balloon_planner", "PlanningParams"))
