--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -14,6 +14,13 @@ z_bounds:
   min: 0.0
   max: 20.0
 
+pid:
+  kP: 2.0
+  kI: 0.01
+  kD: 0.1
+  max_I: 314.16
+  reset_duration: 3.0
+
 start_position:
   [
     0.0,   # x coordinate (metres)
