--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -21,12 +21,12 @@ z_bounds:
   min: 0.0
   max: 20.0
 
-pid:
-  kP: 2.0
-  kI: 0.01
-  kD: 0.1
-  max_I: 314.16
-  reset_duration: 3.0
+constraint_ranges:
+  {
+    "ballcatch_fast":   3.00,
+    "ballcatch_medium": 8.00,
+    "ballcatch_slow":   .inf,
+  }
 
 start_position:
   [
