--- a/tmux_scripts/just_flying_balltraj/custom_configs/constraint_manager.yaml
+++ b/tmux_scripts/just_flying_balltraj/custom_configs/constraint_manager.yaml
@@ -2,42 +2,92 @@ constraints: [
   "slow",
   "medium",
   "fast",
-  "aggressive",
+  "ballcatch_slow",
+  "ballcatch_medium",
+  "ballcatch_fast",
 ]
 
 constraint_management:
 
   # list of allowed gains per odometry mode
   allowed_constraints:
-    GPS: ["slow", "medium", "fast", "aggressive"]
+    GPS: [
+      "slow",
+      "medium",
+      "fast",
+      "ballcatch_slow",
+      "ballcatch_medium",
+      "ballcatch_fast",
+      ]
 
   # those gains will be used automatically when a localization mode switches
   # and the current gains are not in the allowed list (next paragraphs)
   fallback_constraints:
-    GPS: "medium"
+    GPS: "ballcatch_fast"
 
-aggressive:
-
+ballcatch_slow:
   horizontal:
-    speed: 8.3
-    acceleration: 3.0
-    jerk: 5.0
+    speed: 9.0
+    acceleration: 1.1
+    jerk: 10.0
     snap: 10.0
-
   vertical:
-
     ascending:
       speed: 5.0
       acceleration: 3.0
       jerk: 5.0
       snap: 10.0
-
     descending:
+      speed: 2.0
+      acceleration: 2.0
+      jerk: 5.0
+      snap: 3.0
+  yaw:
+    speed: 2.0
+    acceleration: 2.0
+    jerk: 3.0
+    snap: 5.0
+
+ballcatch_medium:
+  horizontal:
+    speed: 9.0
+    acceleration: 2.2
+    jerk: 10.0
+    snap: 10.0
+  vertical:
+    ascending:
       speed: 5.0
       acceleration: 3.0
       jerk: 5.0
       snap: 10.0
+    descending:
+      speed: 2.0
+      acceleration: 2.0
+      jerk: 5.0
+      snap: 3.0
+  yaw:
+    speed: 2.0
+    acceleration: 2.0
+    jerk: 3.0
+    snap: 5.0
 
+ballcatch_fast:
+  horizontal:
+    speed: 9.0
+    acceleration: 3.3
+    jerk: 10.0
+    snap: 10.0
+  vertical:
+    ascending:
+      speed: 5.0
+      acceleration: 3.0
+      jerk: 5.0
+      snap: 10.0
+    descending:
+      speed: 2.0
+      acceleration: 2.0
+      jerk: 5.0
+      snap: 3.0
   yaw:
     speed: 2.0
     acceleration: 2.0
