--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -1,6 +1,6 @@
 planning_period: 0.01 # seconds
 
-max_unseen_duration: 5.0 # seconds
+max_unseen_duration: 555.0 # seconds
 
 glancing:
   yaw_rate: 1.57 # radians per second
@@ -14,6 +14,7 @@ yawing:
   max_ball_distance: 666.0 # metres
 
 lurking:
+  z_offset: -1.0 # metres
   observe_dist: 5 # metres
   max_dist_from_trajectory: 5 # metres
   max_reposition: 0.2 # metres
