--- a/config/plan_params.yaml
+++ b/config/plan_params.yaml
@@ -20,6 +20,7 @@ lurking:
   max_reposition: 1.0 # metres
   min_observing_duration: 3.0 # seconds
   min_points: 20
+  n_last_points: 8 # how many last points to use when RANSACing the lurking position
 
 trajectory:
   sampling_dt: 0.2 # seconds
